social media icons evenly spaced + fixed to bottom on mobile displays. darkened navbar background. aligned 'A' logo directly over first product in desktop view.
need to do:
center 'ABC company text'

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .hamburger {
-  background: gray;
+  background: rgb(77, 77, 77);
   color: white;
   text-align: right;
   width: 100%;
@@ -26,7 +26,7 @@ body {
 }
 
 .product {
-  margin: 3px 40px;
+  margin: 3px 20px;
   padding: 10px;
   border: 1px solid silver;
   border-radius: 5px;
@@ -39,48 +39,46 @@ body {
 }
 
 footer {
-  display: flex;
-  justify-content: space-evenly;
-
+  position: fixed;
+  bottom: 0px;
   width: 100%;
   height: 35px;
+  background: white;
+  color: black;
+  border-top: solid silver 1px;
 }
 footer ul {
-  padding: 0;
+  display: flex;
+  padding-left: 0;
   margin-top: 10px;
+  justify-content: space-evenly;
 }
 footer li {
   list-style: none;
+  padding-left: 0;
   display: inline;
-  margin: 0 30px;
 }
 
 @media screen and (min-width: 480px){
   header {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: space-between;
   }
   header .logo {
     align-self: center;
-    flex-basis: 150px;
+    flex: 1 1 50px;
   }
-  header h1 {
-    flex: 1 0;
+  header h1{
     align-self: center;
+    flex: 2 2;
   }
-  footer li {
-  margin: 0 50px;
-  }
-}
-
 @media screen and (min-width: 760px){
   .hamburger{
     display: none;
   }
   .menu {
-    background: gray;
+    background: rgb(77, 77, 77);
     color: white;
     display: flex;
     flex-direction: row-reverse;
@@ -92,13 +90,18 @@ footer li {
 
   main {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
   }
   .product {
-  margin: 3px 10px;
-  padding: 10px;
-  border: none
+    margin: 0 5px 10px 5px;
+    max-width: 33%;
+    padding: 5px;
+  }
+  .product:nth-child(3){
+    margin-bottom: 10px;
+  }
+  footer{
+    position: static;
   }
   footer li {
   margin: 0 100px;
